src/styles/globals.css
/*
  Copyright (C) Helio Chissini de Castro, 2023. Part of the SW360 Frontend Project.
  Copyright (C) TOSHIBA CORPORATION, 2023. Part of the SW360 Frontend Project.
  Copyright (C) Toshiba Software Development (Vietnam) Co., Ltd., 2023. Part of the SW360 Frontend Project.
  Copyright (C) Siemens AG, 2023. Part of the SW360 Frontend Project.

  This program and the accompanying materials are made
  available under the terms of the Eclipse Public License 2.0
  which is available at https://www.eclipse.org/legal/epl-2.0/

  SPDX-License-Identifier: EPL-2.0
  License-Filename: LICENSE
*/

body {
    background-color: #fafafa;
    color: #272833;
    font-family:
        system-ui,
        -apple-system,
        BlinkMacSystemFont,
        Segoe UI,
        Roboto,
        Oxygen-Sans,
        Ubuntu,
        Cantarell,
        Helvetica Neue,
        Arial,
        sans-serif,
        Apple Color Emoji,
        Segoe UI Emoji,
        Segoe UI Symbol;
    font-size: 1rem;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    font-weight: 400;
    line-height: 1.5;
    margin: 0;
    text-align: inherit;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

:root {
    --font-family-sans-serif:
        system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
        'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
    --font-mono: 'Fira Mono', monospace;
    --pure-white: #ffffff;
    --primary-color: #ffffff;
    --secondary-color: #d0dde9;
    --tertiary-color: #edf0f8;
    --accent-color: #f7941e;
    --heading-color: rgba(0, 0, 0, 0.7);
    --accordion-header-color: #fcd5b1;
    --text-color: #444444;
    --background-without-opacity: rgba(255, 255, 255, 0.7);
    --column-width: 42rem;
    --column-margin-top: 4rem;
    --sw360-primary-background-color: #5d8ea9;
    --sw360-primary-color: #f7941e;
    --sw360-navlink-color: #6c757d;
    --sw360-navlink-hover-color: #f7941e;
    --sw360-navlink-active-color: #272833;
    --link-color: #f7941e;
    --link-hover-color: #5d8ea9;
    --navlink-color: #6c757d;
    --navlink-hover-color: #f7941e;
    --navlink-active-color: #272833;
    --sw360-pagination-hover: #6c757d;
    --table-border-color: #e5e7eb;
    --table-header-border-color: #7296a9;
    --tab-active-background: #5d8ea9;
    --tab-active-foreground: var(--primary-color);
    --tab-hover-background: #5d8ea9;
    --tab-hover-foreground: var(--primary-color);
    --card-background: #ebf0f5;
    --placeholder-foreground: #2728336d;
    --sw360-primary-hover-color: #df7f17;
    /* Overriding bootstrap variables for theming */
    --bs-body-bg: var(--primary-color) !important;
    --bs-body-bg-rgb: 255, 255, 255 !important;
}

[data-theme='dark'] {
    --background: #22272e;
    --foreground: #c6d1dc;
    --card-background: #2b313a;
    --navlink-color: #b0beca;
    --navlink-active-color: #b0beca;
    --navlink-hover-color: #f7941e;
    --table-border-color: #404043;
    --table-header-border-color: #7296a9;
    --link-color: #7bbee3;
    --link-hover-color: #f7941e;
    --placeholder-foreground: #c6d1dc6d;
    /* Overriding bootstrap variables for theming */
    --bs-body-bg: var(--background) !important;
    --bs-body-bg-rgb: 34, 39, 46 !important;
}

.header {
    background-color: #5d8ea9;
    color: white;
    padding-left: 3%;
    padding-right: 3%;
    padding-top: 1rem;
}

.authscreen {
    background-color: #f1f2f5;
}

.accordion-button {
    background-color: var(--accordion-header-color) !important;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: bold;
}

.accordion-button::after {
    display: none;
}

.accordion-button::selection {
    border: none;
    outline: none;
}

html,
body {
    height: 100%;
}

#container {
    min-height: 100%;
    display: flex;
    flex-direction: column;
}

.header a {
    color: var(--sw360-primary-color) !important;
    text-decoration-line: none;
}

.flag {
    background-size: contain;
    background-position: 50%;
    background-repeat: no-repeat;
    line-height: 1em;
    margin-left: 3px;
    margin-right: 3px;
    position: relative;
    display: inline-block;
    width: 1.33333333em;
    line-height: 1em;
    background-color: 'rgba(0, 0, 0, .1)';
    border-radius: '10%';
}

.flag:hover {
    border: '4px';
}

.flag:before {
    content: '\00a0';
}

.table {
    border-spacing: 0;
    color: #272833;
    font-size: 0.875rem;
    margin-bottom: 0;
    width: 100%;
    padding: 10px;
}

.table thead th {
    background-color: var(--sw360-primary-background-color);
    color: white;
    font-size: bold;
}

.table td {
    padding-top: 14px !important;
    padding-bottom: 14px !important;
}

.table th {
    padding: 14px !important;
}

.table thead th a {
    border-radius: 1px;
    color: #6b6c7e;
    transition: box-shadow 0.15s ease-in-out;
}

.btn-toolbar .btn-group:not(:last-child) {
    margin-right: 0.5rem;
}

.btn {
    font-weight: 700 !important;
    border-radius: 3px !important;
}

.btn-secondary {
    background-color: #fff !important;
    border-color: #cdced9 !important;
    color: #6b6c7e !important;
}

.btn-secondary:hover {
    color: #000 !important;
}

.btn-dark {
    background-color: #f1f2f5 !important;
    border: none !important;
    color: #000 !important;
}

.btn-dark:hover {
    background-color: #c2c3c7 !important;
}

.btn-primary {
    background-color: var(--sw360-primary-color) !important;
    border-color: var(--sw360-primary-color) !important;
    color: #272833 !important;
}

.btn-primary:focus {
    background-color: var(--sw360-primary-color) !important;
    border-color: white !important;
}
/* ... */

